--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -1,4 +1,4 @@
-@import "../settings";
+@import "../settings.scss";
 
 .login {
   display: grid;
@@ -10,29 +10,6 @@
   }
 
   .login-right-part {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    h1 {
-      text-transform: uppercase;
-      color: $secondaryColor-Medium;
-      font-size: 4rem;
-      font-weight: bold;
-      line-height: 60px;
-      margin-bottom: 90px;
-      font-family: $displayFont-H2;
-
-      @media screen and (max-width: 900px) {
-        margin-top: 30px;
-        margin-bottom: 30px;
-      }
-
-      @media screen and (max-height: 800px) {
-        margin-bottom: 15px;
-      }
-    }
 
     .form-container {
 
@@ -69,8 +46,8 @@
 
           .label {
             z-index: 10;
-            transform: translateX(10px);
-            background-color: white;
+            transform: translate(0px, -10px);
+            color: var(--textColor);
           }
 
           #label-pseudo {
@@ -106,11 +83,11 @@
 
         input[type="submit"] {
           height: 65px;
-          width: 194.05px;
+          width: 200px;
           border-radius: 8px;
-          color: $white;
-          background-color: $primaryColor-Medium;
-          border-color: $primaryColor-Medium;
+          color: var(--mainActionTextColor);
+          background-color: var(--mainActionColor);
+          border-color: var(--mainActionColor);
           margin-top: 50px;
           cursor: pointer;
 
@@ -126,16 +103,15 @@
         }
 
         #lostPassword:hover {
-          color: $secondaryColor-Low;
+          color: var(--secondaryColor-Low);
         }
       }
     }
 
     p {
-      color: #23222D;
 
       #need-to-register {
-        color: $secondaryColor-Medium;
+        color: var(--tertiaryActionColor);
         font-weight: bold;
         text-decoration: none;
       }
